# k8s-secret-check

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker-publish.yml
bases/main/: deployment.yaml  service-account.yaml
src/: main.rs
