[package]
name = "k8s-secret-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube-client = { version = "0.70.0" }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
serde  = "1.0"
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["macros"] }
futures = "0.3.21"
#yaml-rust = { version = "0.5", package = "yaml-rust-davvid" }
yaml-rust = "0.4"
